--- a/Changes
+++ b/Changes
@@ -2,7 +2,14 @@ Revision history for WWW-DanDomain
 
 $Id$
 
-0.01    Not released
+0.02    Minor release, 16.09.2009, update not required
 
-        First version, to be released on an unsuspecting world.
+- Fixed dependencies, WWW::Mechanize was not listed, so smoke tests were
+  failing
+        
+- First shot at caching using WWW::Mechanize::Cached
 
+
+0.01    Initial release, 15.06.2009
+
+- First version, to be released on an unsuspecting world.
