Updated, prepping release
git-svn-id: file:///Users/jonasbn/Desktop/svnrepos/local-svn/DAND/trunk@6984 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/Changes
+++ b/Changes
@@ -2,6 +2,13 @@ Revision history for WWW-DanDomain
 
 $Id$
 
+0.03    Maintenance release 20.02.2010, updated not required
+
+- Implemented handling of DanDomain access scenario where authentication credentials are not needed, since authorization is based on IP validation (feature with DanDomain)
+
+- Improved error handling
+
+
 0.02    Minor release, 16.09.2009, update not required
 
 - Fixed dependencies, WWW::Mechanize was not listed, so smoke tests were
