--- a/Changes
+++ b/Changes
@@ -5,12 +5,27 @@ $Id$
 Project change log:
 http://logicLAB.jira.com/browse/DAND#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
 
-0.05    Feature release 17.04.2011, updated not required
+0.06 2013-07-24
+
+- Fixed up Changes file as part of my Questhub quest adhering to the standard
+  described in: CPAN::Changes::Spec [DAND-10]
+
+  Quest: http://questhub.io/realm/perl/quest/51f0fd8e18ba7dcf4b000040
+  Spec: https://metacpan.org/module/CPAN::Changes::Spec
+  
+  https://logiclab.jira.com/browse/DAND-10
+
+
+0.05 2011-04-17
+
+- Feature release, updated not required
 
 - Introducing new parameter to constructor, providing more flexibility in interacting with the class http://logicLAB.jira.com/browse/DAND-8 [DAND-8]
 
 
-0.04    Bug fix release 21.02.2010, updated not required
+0.04 2010-02-21
+
+- Bug fix release, updated not required
 
 - Addressing failing test report
 
@@ -19,14 +34,18 @@ http://logicLAB.jira.com/browse/DAND#selectedTab=com.atlassian.jira.plugin.syste
     - FAIL http://www.cpantesters.org/cpan/report/6848267
 
 
-0.03    Maintenance release 20.02.2010, updated not required
+0.03 2010-02-20
+
+- Maintenance release, updated not required
 
 - Implemented handling of DanDomain access scenario where authentication credentials are not needed, since authorization is based on IP validation (feature with DanDomain)
 
 - Improved error handling
 
 
-0.02    Minor release, 16.09.2009, update not required
+0.02 2009-09-16
+
+- Minor release feature/bug fix release, update not required
 
 - Fixed dependencies, WWW::Mechanize was not listed, so smoke tests were
   failing
@@ -34,6 +53,6 @@ http://logicLAB.jira.com/browse/DAND#selectedTab=com.atlassian.jira.plugin.syste
 - First shot at caching using WWW::Mechanize::Cached
 
 
-0.01    Initial release, 15.06.2009
+0.01 2009-06-15
 
 - First version, to be released on an unsuspecting world.
