--- a/Changes
+++ b/Changes
@@ -5,6 +5,14 @@ $Id$
 Project change log:
 http://logicLAB.jira.com/browse/DAND#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
 
+HEAD
+
+- Added changes.t automatic assertion of the integrity of the Changes file
+  see also DAND-10 [DAND-11]
+
+  https://logiclab.jira.com/browse/MBB-40
+
+
 0.06 2013-07-24
 
 - Fixed up Changes file as part of my Questhub quest adhering to the standard
