Changes file clean up

--- a/Changes
+++ b/Changes
@@ -7,33 +7,33 @@ http://logicLAB.jira.com/browse/DAND#selectedTab=com.atlassian.jira.plugin.syste
 
 HEAD
 
-- Added changes.t automatic assertion of the integrity of the Changes file
-  see also DAND-10 [DAND-11]
+- Added changes.t automatic assertion of the integrity of the
+  Changes file see also DAND-10 [DAND-11]
 
   https://logiclab.jira.com/browse/MBB-40
 
 
-0.06 2013-07-24
+0.06 2013-07-24, maintenance release, updated not required
 
-- Fixed up Changes file as part of my Questhub quest adhering to the standard
-  described in: CPAN::Changes::Spec [DAND-10]
+- Fixed up Changes file as part of my Questhub quest adhering to
+  the standard described in: CPAN::Changes::Spec [DAND-10]
 
-  Quest: http://questhub.io/realm/perl/quest/51f0fd8e18ba7dcf4b000040
+  Quest:
+  http://questhub.io/realm/perl/quest/51f0fd8e18ba7dcf4b000040
   Spec: https://metacpan.org/module/CPAN::Changes::Spec
-  
+
   https://logiclab.jira.com/browse/DAND-10
 
 
-0.05 2011-04-17
+0.05 2011-04-17, Feature release, updated not required
 
-- Feature release, updated not required
+- Introducing new parameter to constructor, providing more
+  flexibility in interacting with the class
 
-- Introducing new parameter to constructor, providing more flexibility in interacting with the class http://logicLAB.jira.com/browse/DAND-8 [DAND-8]
+  http://logicLAB.jira.com/browse/DAND-8 [DAND-8]
 
 
-0.04 2010-02-21
-
-- Bug fix release, updated not required
+0.04 2010-02-21, Bug fix release, updated not required
 
 - Addressing failing test report
 
@@ -42,22 +42,20 @@ HEAD
     - FAIL http://www.cpantesters.org/cpan/report/6848267
 
 
-0.03 2010-02-20
+0.03 2010-02-20, Maintenance release, updated not required
 
-- Maintenance release, updated not required
-
-- Implemented handling of DanDomain access scenario where authentication credentials are not needed, since authorization is based on IP validation (feature with DanDomain)
+- Implemented handling of DanDomain access scenario where
+  authentication credentials are not needed, since authorization
+  is based on IP validation (feature with DanDomain)
 
 - Improved error handling
 
 
-0.02 2009-09-16
+0.02 2009-09-16, Minor release feature/bug fix release, update not required
 
-- Minor release feature/bug fix release, update not required
+- Fixed dependencies, WWW::Mechanize was not listed, so smoke
+  tests were failing
 
-- Fixed dependencies, WWW::Mechanize was not listed, so smoke tests were
-  failing
-        
 - First shot at caching using WWW::Mechanize::Cached
 
 
