--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@ Change history for WWW::DanDomain
 Project change log:
 http://logicLAB.jira.com/browse/DAND#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel
 
-HEAD
+0.08 2014-08-28, bug fix release, updated not required
 
 - Upgraded license from Artistic 1.0 to Artistic 2.0
 
